Wed Nov 02 19:28:14 2005  Gan Deng  <gan.deng@vanderbilt.edu>

	* tools/Config_Handlers/RT-CCM/CB_Handler.cpp
	* tools/Config_Handlers/RT-CCM/TPL_Handler.cpp
	* tools/Config_Handlers/RT-CCM/PS_Handler.cpp
	* DAnCE/NodeApplication/RTConfig_Manager.cpp:

	  Fixed some bugs related to populating/displaying ServerResource 
	  data structure.

Wed Nov 02 14:55:14 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* DAnCE/NodeApplication/RTNodeApp_Configurator.cpp: Fixed strings
	  comparisons syntax.

	* DAnCE/NodeApplication/RTConfig_Manager.cpp:
	* DAnCE/NodeApplication/RTConfig_Manager.h: Added a new
	  print_resource method and a bunch of debugging print out to help
	  debugging XML parsing and propagating.

	* examples/Hello/descriptors/RTsvc.conf:
	* examples/Hello/descriptors/rt_run_test.pl: Added a RTsvc.conf
	  file to start up the NodeApplication in RT mode.
	
	* examples/Hello/descriptors/rt-config-example.csr: Made RT
	  resource definitions more realistic and added a new policy set
	  for debugging XML parsing.

Wed Nov 02 07:09:10 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* DAnCE/NodeApplicationManager/Containers_Info_Map.cpp: Fixed
	  usage of strings.

Tue Nov 01 22:41:04 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* DAnCE/NodeApplicationManager/Containers_Info_Map.cpp: Changed to
	  insert policy set name into ContainerPolicySet property instead
	  of the actual policy since we already have the policy set
	  definitions when creating the NodeApplication.

Tue Nov 01 13:44:58 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* DAnCE/NodeApplication/RTConfig_Manager.cpp:
	* DAnCE/NodeApplication/RTConfig_Manager.h:
	* DAnCE/NodeApplication/RTConfig_Manager.inl:
	* DAnCE/NodeApplication/RTNodeApp_Configurator.cpp:
	* DAnCE/NodeApplication/RTNodeApp_Configurator.h: Integrated
	  RTConfig_Manager with the RTNodeApp_Configurator.  

Mon Oct 31 22:37:42 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>
